# comunix

./: README.md  setup.src
debian/: LICENSE.src  changelog  control  copyright  copyright.sum  rules
debian/install/: comunix-dev.install  comunix-doc.install  comunix-lib.install  comunix.install
src/: Makefile.am  Makefile.src  configure.ac
src/docs/: README.putain
src/lib/: Makefile.am  com-unix.c  com-unix.h
src/main/: Makefile.am  main.c
src/man/: comunix.1  comunix.3
