AUTOMAKE_OPTIONS = foreign
AM_CXXFLAGS = -g -Wall -Wpadded -Wextra -Wimplicit-fallthrough=0 -fPIC -std=c90 -pedantic -DSTRING -DSTDLIB -UDEBUG
ACLOCAL_AMFLAGS = -Im4
lib_LTLIBRARIES = libcomunix.la
man3_MANS=../man/comunix.3
libcomunix_la_SOURCES = com-unix.c com-unix.h
include_HEADERS = com-unix.h
